--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -7,4 +7,36 @@ html {
 img {
   background-color: transparent; }
 
+body {
+  font-family: Helvetica-Lignt, sans-serif; }
+
+nav {
+  background: #161616;
+  height: 75px;
+  display: flex;
+  align-content: center; }
+
+.logo {
+  margin: 5px;
+  width: 125px; }
+
+.nav-title {
+  color: #fff;
+  font-family: "Dancing Script", Geneva, sans-serif;
+  margin-left: 40px; }
+
+.info h1 {
+  color: #2d2d2d;
+  font-size: 35px;
+  font-weight: 400;
+  text-align: center; }
+
+.sub-title {
+  font-size: 27px;
+  text-align: center; }
+
+.sub-title2 {
+  font-size: 24px;
+  text-align: center; }
+
 /*# sourceMappingURL=style.css.map */
