--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -28,7 +28,7 @@ nav {
 .info h1 {
   color: #2d2d2d;
   font-size: 35px;
-  font-weight: 400;
+  font-weight: 300;
   text-align: center; }
 
 .sub-title {
@@ -37,6 +37,17 @@ nav {
 
 .sub-title2 {
   font-size: 24px;
+  margin-bottom: 0;
   text-align: center; }
+
+.recent-videos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 10px auto;
+  max-width: 800px; }
+
+.content {
+  padding: 10px; }
 
 /*# sourceMappingURL=style.css.map */
