--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,7 +36,7 @@ nav {
 .info h1 {
     color: #2d2d2d;
     font-size: 35px;
-    font-weight: 400;
+    font-weight: 300;
     text-align: center;
 }
 
@@ -47,5 +47,18 @@ nav {
 
 .sub-title2 {
     font-size: 24px;
+    margin-bottom: 0;
     text-align: center;
+}
+
+.recent-videos {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 10px auto;
+    max-width: 800px;
+}
+
+.content {
+    padding: 10px;
 }
