--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,8 +10,10 @@ img {
     background-color: transparent;
 }
 
-body {
+.container {
     font-family: Helvetica-Lignt, sans-serif;
+    margin: 0 auto;
+    max-width: 800px;
 
 }
 
@@ -42,12 +44,14 @@ nav {
 
 .sub-title {
     font-size: 27px;
+    font-weight: 300;
     text-align: center;
 }
 
 .sub-title2 {
     font-size: 24px;
     margin-bottom: 0;
+    font-weight: 300;
     text-align: center;
 }
 
@@ -61,4 +65,25 @@ nav {
 
 .content {
     padding: 10px;
+}
+
+.search-wrapper {
+    border-radius: 5px;
+    margin: 20px auto;
+    height: 100px;
+    max-width: 600px;
+    background-color: #2f2f30;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 1.5em;
+}
+
+[name=recipe] {
+    width: 18em;
+}
+
+[name=submit] {
+    background: #8da836;
+    border-radius: 5px;
 }
