--- a/scss/style.scss
+++ b/scss/style.scss
@@ -55,12 +55,16 @@ nav {
     text-align: center;
 }
 
-.recent-videos {
+.videos {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     margin: 10px auto;
     max-width: 800px;
+}
+
+.recents img {
+    border-radius: 2em;
 }
 
 .content {
@@ -86,4 +90,53 @@ nav {
 [name=submit] {
     background: #8da836;
     border-radius: 5px;
+    color: #ececec;
+}
+
+.search-label {
+    margin-left: 3.5%;
+    text-align: left;
+}
+
+.recipe-video img {
+    border-radius: .5em;
+}
+
+.directions {
+    display: flex;
+    justify-content: space-between;
+    font-weight: 300;
+    line-height: 1.3em;
+    padding: 15px;
+}
+
+.dir-column {
+    border: 1px solid #ececec;
+    border-radius: 5px;
+    flex: 1;
+    margin: 10px;
+    padding: 10px;
+}
+
+.btn-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.btn-more {
+    background-color: #8da836;
+    border-radius: 10px;
+    font-size: 1.3em;
+    color: #ececec;
+    padding: 10px 20px;
+}
+
+footer {
+    background: #161616;
+    height: 75px;
+    display: flex;
+    align-content: center;
+    color: #ececec;
+    margin: 20px 0;
+    padding: 5px;
 }
