connect display most recent

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,6 +51,7 @@ nav {
 .sub-title2 {
     font-size: 24px;
     margin-bottom: 0;
+    margin-top: 19px;
     font-weight: 300;
     text-align: center;
 }
@@ -65,6 +66,8 @@ nav {
 
 .recents img {
     border-radius: 2em;
+    height: 134px;
+    width: 200px;
 }
 
 .content {
