--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -41,6 +41,7 @@ nav {
 .sub-title2 {
   font-size: 24px;
   margin-bottom: 0;
+  margin-top: 19px;
   font-weight: 300;
   text-align: center; }
 
@@ -52,7 +53,9 @@ nav {
   max-width: 800px; }
 
 .recents img {
-  border-radius: 2em; }
+  border-radius: 2em;
+  height: 134px;
+  width: 200px; }
 
 .content {
   padding: 10px; }
