display search results, keep dry

--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -49,12 +49,13 @@ nav {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin: 10px auto;
+  margin: 15px auto;
   max-width: 800px; }
 
 .recents img {
   border-radius: 2em;
-  height: 134px;
+  height: 138px;
+  margin: 0 5px;
   width: 200px; }
 
 .content {
@@ -83,13 +84,24 @@ nav {
   margin-left: 3.5%;
   text-align: left; }
 
-.recipe-video img {
-  border-radius: .5em; }
+.recipe-video {
+  color: #943f2e; }
+  .recipe-video img {
+    border-radius: .5em;
+    height: 148px;
+    margin: 0 5px;
+    width: 220px; }
+  .recipe-video p {
+    text-align: center; }
+
+.results.videos a {
+  text-decoration: none; }
 
 .directions {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
   font-weight: 300;
+  justify-content: space-between;
   line-height: 1.3em;
   padding: 15px; }
 
@@ -98,6 +110,7 @@ nav {
   border-radius: 5px;
   flex: 1;
   margin: 10px;
+  min-width: 300px;
   padding: 10px; }
 
 .btn-wrapper {
@@ -107,16 +120,16 @@ nav {
 .btn-more {
   background-color: #8da836;
   border-radius: 10px;
-  font-size: 1.3em;
   color: #ececec;
+  font-size: 1.3em;
   padding: 10px 20px; }
 
 footer {
-  background: #161616;
-  height: 75px;
-  display: flex;
   align-content: center;
+  background: #161616;
   color: #ececec;
+  display: flex;
+  height: 75px;
   margin: 20px 0;
   padding: 5px; }
 
