show next set of results

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -154,6 +154,7 @@ nav {
     background-color: #8da836;
     border-radius: 10px;
     color: #ececec;
+    cursor: pointer;
     font-size: 1.3em;
     padding: 10px 20px;
 }
