--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -125,6 +125,7 @@ nav {
   background-color: #8da836;
   border-radius: 10px;
   color: #ececec;
+  cursor: pointer;
   font-size: 1.3em;
   padding: 10px 20px; }
 
