--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -1,7 +1,3 @@
-nav li {
-  height: 56px;
-  margin: 5px 20px; }
-
 .logo {
   max-height: 100%; }
 
@@ -12,24 +8,32 @@ nav li {
       font-size: 2.8em; } }
 
 nav {
-  height: 80px;
-  display: flex;
-  align-items: center; }
+  height: auto; }
   nav ul {
-    width: 100%; }
+    width: 100%;
+    display: flex; }
     nav ul li {
       display: flex;
-      align-items: center; }
+      align-items: center;
+      height: 56px;
+      margin: 5px 15px; }
+      nav ul li:nth-of-type(2) {
+        margin-right: auto; }
 
-.sm-search-container {
+.nav-row {
   display: flex;
+  align-items: center;
   justify-content: center; }
-  .sm-search-container .search {
-    width: 80%; }
+
+#sm-search-box input {
+  width: 90vw;
+  max-width: 430px;
+  margin: 5px 0 10px 0; }
 
 .search {
-  width: calc(100% - 680px);
-  min-width: 175px; }
+  width: calc(100% - 400px);
+  min-width: 270px;
+  max-width: 430px; }
 
 .no-vrt-margin {
   margin-top: 0 !important;
