--- a/scss/style.scss
+++ b/scss/style.scss
@@ -56,3 +56,10 @@ nav {
     margin: 0 auto;
     max-width: 1280px;
 }
+
+.recent3 section {
+    display: flex;
+    a:nth-of-type(2) {
+        margin: 0 5px;
+    }
+}
