--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -43,9 +43,19 @@ nav {
   margin: 0 auto;
   max-width: 1280px; }
 
-.recent3 section {
-  display: flex; }
-  .recent3 section a:nth-of-type(2) {
-    margin: 0 5px; }
+.recents .col {
+  padding: .10rem; }
+
+.recents .card {
+  margin-top: 0; }
+
+.recents .card-title {
+  width: 100%;
+  bottom: .3rem;
+  position: absolute;
+  background: #000;
+  background: linear-gradient(to top, #000 25%, transparent 100%) repeat scroll 0 0 transparent;
+  color: #fff;
+  -webkit-font-smoothing: antialiased; }
 
 /*# sourceMappingURL=style.css.map */
