--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,9 +57,22 @@ nav {
     max-width: 1280px;
 }
 
-.recent3 section {
-    display: flex;
-    a:nth-of-type(2) {
-        margin: 0 5px;
+.recents {
+    .col {
+        padding: .10rem;
+    }
+
+    .card {
+        margin-top: 0;
+    }
+
+    .card-title {
+        width: 100%;
+        bottom: .3rem;
+        position: absolute;
+        background: #000;
+        background: linear-gradient(to top, #000 25%, rgba(0, 0, 0, 0) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+        color: #fff;
+        -webkit-font-smoothing: antialiased;
     }
 }
