--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -77,4 +77,22 @@ nav {
     right: 20px;
     font-size: 200%; }
 
+#player-area .col {
+  padding: 0 .10rem; }
+
+.video-wrapper {
+  float: none;
+  clear: both;
+  width: 100%;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+  height: 0; }
+  .video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+
 /*# sourceMappingURL=style.css.map */
