--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -50,10 +50,11 @@ nav {
   margin: 0 auto;
   max-width: 1280px; }
 
+.col {
+  padding: 0 .10rem; }
+
 .recents, .results {
   margin-bottom: 0; }
-  .recents .col, .results .col {
-    padding: 0 .10rem; }
   .recents .card, .results .card {
     margin-bottom: .1rem;
     margin-top: 0; }
@@ -77,8 +78,13 @@ nav {
     right: 20px;
     font-size: 200%; }
 
-#player-area .col {
-  padding: 0 .10rem; }
+#player-area {
+  position: absolute;
+  width: 100vw;
+  top: 25%; }
+
+.hide {
+  display: none; }
 
 .video-wrapper {
   float: none;
