--- a/scss/style.scss
+++ b/scss/style.scss
@@ -68,12 +68,12 @@ nav {
     max-width: 1280px;
 }
 
-.col {
-    padding: 0 .10rem;
-}
-
 .recents, .results {
     margin-bottom: 0;
+
+    .col {
+        padding: 0 .10rem;
+    }
 
     .card {
         margin-bottom: .1rem;
@@ -106,13 +106,9 @@ nav {
 }
 
 #player-area {
-    position: absolute;
-    width: 100vw;
-    top: 25%;
-}
-
-.hide {
-    display: none;
+    max-height: 80%;
+    width: 85%;
+    padding-bottom: 24px;
 }
 
 .video-wrapper {
