put 'more videos' button back in

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -129,4 +129,13 @@ nav {
     }
 }
 
+.btn-wrapper {
+    margin-top: 20px;
+}
+
+.btn-more {
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 1.5em;
+}
 
