--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -97,4 +97,12 @@ nav {
     width: 100%;
     height: 100%; }
 
+.btn-wrapper {
+  margin-top: 20px; }
+
+.btn-more {
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 1.5em; }
+
 /*# sourceMappingURL=style.css.map */
